# stimm

./: .coverage  .env.example  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .release-please-manifest.json  .semgrep.yml  AGENT.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  alembic.ini  bandit_report.txt  cleanup_plan.md  docker-compose.livekit.yml  docker-compose.yml  livekit.toml  livekit.yaml  mkdocs.yml  pyproject.toml  release-please-config.json  sip-server-config.yaml  test_hume_simple.py
.github/workflows/: ci.yml  deploy-docs.yml  release-please.yml  release.yml  sync-providers.yml
alembic/: env.py
alembic/versions/: 001_initial_agent_schema.py  002_add_system_prompt_to_agent.py  633edd42c760_add_documents_table.py  962e5b26ffd2_add_rag_configs_table.py
complementary_documentation/self-hosted-llm-services-building/: TensorRT-LLM-FP8Model-Compilation.md  TensorRT-LLM-Quantization-and-Compiling.md  llama_cpp_setup.md
docker/agent/: agent.py  requirements.txt
docker/kokoro-tts/: docker-compose.yml
docker/llama-cpp/: docker-compose.yml
docker/postgres/: docker-compose.yml
docker/stimm/: .env.example  Dockerfile  docker-compose.yml  entrypoint.sh
docker/stimm-front/: Dockerfile.dev  docker-compose.yml
docker/voicebot-app/: Dockerfile  docker-compose.yml
docs/: CI_CD_HANDOFF.md  EXTENSION_WIZARD_INTEGRATION.md  SUPERVISOR_OBSERVABILITY_INTEGRATION.md  index.md
docs/api/: python.md  rest.md
docs/api-reference/: python.md  rest.md
docs/assets/: extra.css
docs/contributors/: changelog.md  contributing.md  license.md
docs/developer/: adding-providers.md  architecture-overview.md  components.md  data-flow.md  development.md  integration-examples.md  security.md  sip-integration.md  testing.md
docs/developer-guide/: adding-providers.md  architecture-overview.md  components.md  data-flow.md  deployment.md  development.md  integration-examples.md  testing.md
docs/getting-started/: configuration.md  quick-start.md
docs/project/: changelog.md  contributing.md  license.md
docs/usage/: cli.md  managing-agents.md  managing-rag.md  web-interface.md
docs/user-guide/: cli.md  configuration.md  installation.md  managing-agents.md  managing-rag.md  quick-start.md  sip-integration.md  web-interface.md
documentation/: agent_management_system.md  deepgram_stt_provider.md  elevenlabs_tts_provider.md  elevenlabs_tts_provider_implementation_plan.md  kokoro_local_tts_provider.md
examples/basic/: supervisor.py  voice_agent.py
examples/knowledge_base/: banque_rennaise.md
livekit/: __init__.py  agents.py
livekit/api/: __init__.py
livekit/plugins/: __init__.py  azure.py  cartesia.py  google.py
scripts/: bump-version  check_dependencies.py  dev_build.sh  purge_livekit_rooms.py  setup_env.sh  setup_pythonpath.py  sync_livekit_plugins.py  validate_runtime_contract.py
scripts/sip_integration/: create_sip_trunk.py  sip-dispatch-config.py  update_trunk.py
specs/: stimm-library-extraction-spec.md
src/: environment_config.py  main.py  requirements.txt
src/bigrefacto/: integration_example.py  task.md
src/cli/: DEPRECATED_echo_agent.py  DEPRECATED_test_echo_client.py  __init__.py  agent_runner.py  agent_worker.py  echo_client.py  echo_client_livekit_agent.py  echo_server.py  echo_server_livekit_agent.py  echo_server_optimized.py  echo_test_complete.py  livekit_client.py  main.py  simple_echo_agent.py  simple_echo_client.py  test_echo_client.py  test_livekit_microphone.py  test_vad_echo.py  text_input.py
src/database/: __init__.py  models.py  session.py
src/front/: .env.example  .eslintrc.security.json  eslint.security.config.mjs  next.config.mjs  openapi.config.json  package-lock.json  package.json  sonar-project.properties  tailwind.config.js  tsconfig.json
src/front/app/: globals.css  layout.tsx  page.tsx
src/front/hooks/: use-livekit.ts  use-microphone-devices.ts  use-modal-router.tsx  use-telemetry.ts
src/front/lib/: environment-config.ts  frontend-config.ts  livekit-client.ts  theme.ts  webrtc-client.ts
src/kokoro.local/: main.py
src/livekit/: __init__.py  agents.py
src/livekit/plugins/: __init__.py  openai.py  silero.py  speechmatics.py
src/scripts/: clean_agent_configs.py  clear_and_ingest.py  evaluate_rag.py  ingest_documents.py  ingest_external_document.sh  preload_rag_models.py  test_rag_preloading.py  verify_retrieval_fix.py
src/services/: provider_constants.json  provider_constants.py  shared_streaming.py  sip_bridge_integration.py
src/services/agent/: __init__.py  agent_config_helper.py  agent_manager.py  agent_service.py  dev_agent_creator.py  exceptions.py  models.py  provider_registry.py
src/services/agents/: __init__.py  agent_factory.py  config.py  debug_stimm_logs.py  event_loop.py  metrics.py  routes.py  stimm_service.py  vad_service.py  voicebot_service.py
src/services/agents_admin/: __init__.py  agent_manager.py  (+7 more)
src/static/: audio_streamer.js
src/stimm/: __init__.py  buffering.py  conversation_supervisor.py  protocol.py  providers.json  providers.py  providers_runtime.json  room.py  room_manager.py  supervisor.py  voice_agent.py  worker.py
src/tests/: test_silero_vad.py
src/utils/: logging_config.py
src/voicebot_app/: main.py  requirements.txt  test_provider_registry.py
tests/: conftest.py  test_buffering.py  test_conversation_supervisor.py  test_protocol.py  test_providers.py  test_room.py  test_supervisor.py  test_uv_compatibility.py  test_uv_migration.sh  test_voice_agent.py
tests/agents/: test_vad_integration.py
tests/fixtures/: __init__.py  test_utils.py
tests/integration/: __init__.py
tests/services_DEPRECATED/: README.md
tests/sip_integration/: test_sip_bridge.py  test_sip_bridge_integration.py
tests/unit/: __init__.py  test_agent_exceptions.py  test_agent_models.py  test_audio_utils.py  test_database_models.py  test_environment_config.py  test_logging_config.py  test_provider_constants.py  test_vad_silero.py
tests/webrtc/: test_webrtc_signaling.py
website/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
(+252 files in other folders)
