[project]
name = "stimm"
version = "0.1.0"
description = "Dual-agent voice orchestration built on livekit-agents"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "Etienne"}
]
keywords = ["voice", "agent", "livekit", "dual-agent", "orchestration", "realtime"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "livekit-agents>=1.1",
    "livekit-plugins-silero>=1.1",
    "pydantic>=2.0",
]

[project.optional-dependencies]
deepgram = ["livekit-plugins-deepgram>=1.1"]
openai = ["livekit-plugins-openai>=1.1"]
elevenlabs = ["livekit-plugins-elevenlabs>=1.1"]
cartesia = ["livekit-plugins-cartesia>=1.1"]
google = ["livekit-plugins-google>=1.1"]
anthropic = ["livekit-plugins-anthropic>=1.1"]
all = ["stimm[deepgram,openai,elevenlabs,cartesia,google,anthropic]"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[project.urls]
Homepage = "https://github.com/etienne/stimm"
Repository = "https://github.com/etienne/stimm"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/stimm"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
